crates/oxc_css_parser/tests/error/scss/at-rule/forward/as-asterisk.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `<ident>`, but found `*`
  ┌─ as-asterisk.scss:1:17
  │
1 │ @forward "a" as *;
  │                 ^


